@@ -1,3 +1,16 @@
+unipi-kernel-modules (1.18.1.20180924-1) unstable; urgency=medium
+
+  * Compiled for raspberrypi-kernel 1.20180924-1
+
+ -- Miroslav Ondra <bokula@bokula.faster.cz>  Fri, 19 Oct 2018 10:09:57 +0200
+
+unipi-kernel-modules (1.18) unstable; urgency=medium
+
+  * disabled long spi tranfer
+  * added missing dummy method for reading secondary analog output
+
+ -- Miroslav Ondra <bokula@bokula.faster.cz>  Mon, 16 Oct 2018 15:08:40 +0200
+
 unipi-kernel-modules (1.17.1.20180924-1) unstable; urgency=medium
 
   * Compiled for raspberrypi-kernel 1.20180924-1
