@@ -51,7 +51,7 @@
 #if NEURONSPI_SCHED_REQUIRED > 0
 	#include <uapi/linux/sched/types.h>
 #endif
-#define NEURONSPI_MAJOR_VERSIONSTRING "Version 1.18:2018:10:16"
+#define NEURONSPI_MAJOR_VERSIONSTRING "Version 1.18:2018:10:31"
 
 #define NEURONSPI_MAX_DEVS				3
 #define NEURONSPI_MAX_UART				16
@@ -64,7 +64,7 @@
 #define NEURONSPI_DEFAULT_FREQ			600000
 #define NEURONSPI_COMMON_FREQ			12000000
 #define NEURONSPI_SLOWER_FREQ			7500000
-#define NEURONSPI_MAX_TX				62
+#define NEURONSPI_MAX_TX				60
 //#define NEURONSPI_MAX_TX				256
 #define NEURONSPI_MAX_BAUD				115200
 #define NEURONSPI_FIFO_SIZE				256
